이미지뷰 활용 예시

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,12 @@
         android:layout_height="wrap_content"
         android:text="개인정보 활용 동의" />
 
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/cat" />
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
